# second-brain

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/second-brain/: constants.py  daily_learning.py
